[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/default.theme" type="Theme" id=1]
[ext_resource path="res://src/dialogue/DialogueBox.gd" type="Script" id=2]
[ext_resource path="res://src/dialogue/DialoguePlayer.tscn" type="PackedScene" id=3]

[node name="DialogueBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Portrait" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -601.0
margin_right = 400.0
margin_bottom = -258.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -280.0

[node name="PanelItems" type="VBoxContainer" parent="Panel"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Panel/PanelItems"]
margin_left = 400.0
margin_right = 180.0
margin_bottom = 14.0
size_flags_vertical = 5
text = "Name"

[node name="Text" type="Label" parent="Panel/PanelItems"]
margin_top = 30.0
margin_right = 1000.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Dialogue Text"
align = 1
valign = 1

[node name="ButtonNext" type="Button" parent="Panel/PanelItems"]
margin_left = 600.0
margin_top = 225.0
margin_right = 180.0
margin_bottom = 100.0
rect_min_size = Vector2( 180, 40 )
size_flags_vertical = 0
text = "Next"

[node name="ButtonFinished" type="Button" parent="Panel/PanelItems"]
margin_left = 800.0
margin_top = 225.0
margin_right = 980.0
margin_bottom = 265.0
rect_min_size = Vector2( 180, 40 )
size_flags_vertical = 0
text = "Done"

[node name="DialoguePlayer" parent="." instance=ExtResource( 3 )]
[connection signal="pressed" from="Panel/PanelItems/ButtonNext" to="." method="_on_ButtonNext_pressed"]
[connection signal="pressed" from="Panel/PanelItems/ButtonFinished" to="." method="_on_ButtonFinished_pressed"]
